added method to check if widget contains error + used it to display message

--- a/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
+++ b/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
@@ -14,6 +14,7 @@
           <ion-item>
             <ion-label position="floating">title</ion-label>
             <ion-input formControlName="title" [(ngModel)]="event.title"></ion-input>
+            <div class="error-message" *ngIf="hasError('title')">Title should not be empty</div>
           </ion-item>
           <ion-item>
             <ion-label position="floating">category</ion-label>
