added error-message style + updated title error message

--- a/frontend/src/app/dialogs/add-text-event/add-text-event.page.scss
+++ b/frontend/src/app/dialogs/add-text-event/add-text-event.page.scss
@@ -1,3 +1,10 @@
 ion-col.column-content {
     padding: 5px 5px;
 }
+
+div.error-message {
+    color: red;
+    font-size: xx-small;
+    width: 100%;
+    text-align: right;
+}
