--- a/frontend/src/app/dialogs/add-text-event/add-text-event.page.scss
+++ b/frontend/src/app/dialogs/add-text-event/add-text-event.page.scss
@@ -7,4 +7,7 @@ div.error-message {
     font-size: xx-small;
     width: 100%;
     text-align: right;
+    margin: 0px;
+    padding: 0px;
+    text-transform: lowercase;
 }
