--- a/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
+++ b/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
@@ -14,7 +14,7 @@
           <ion-item>
             <ion-label position="floating">title</ion-label>
             <ion-input formControlName="title" [(ngModel)]="event.title"></ion-input>
-            <div class="error-message" *ngIf="hasError('title')">title should not be empty</div>
+            <div class="error-message" *ngIf="hasError('title')">title cannot be empty</div>
           </ion-item>
           <ion-item>
             <ion-label position="floating">category</ion-label>
@@ -36,6 +36,7 @@
           <ion-item>
             <ion-label position="floating">content</ion-label>
             <ion-textarea rows="4" cols="20" value="" formControlName="content" [(ngModel)]="event.content"></ion-textarea>
+            <div class="error-message" *ngIf="hasError('content')">content cannot be empty</div>
           </ion-item>
           <ion-item>
             <ion-label>start date</ion-label>
