--- a/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
+++ b/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
@@ -23,6 +23,7 @@
                 {{ category.name }}
               </ion-select-option>
             </ion-select>
+            <div class="error-message" *ngIf="hasError('category')">select category</div>
           </ion-item>
           <ion-item>
             <ion-label position="floating">owner</ion-label>
@@ -31,6 +32,7 @@
                 {{ user }}
               </ion-select-option>
             </ion-select>
+            <div class="error-message" *ngIf="hasError('owner')">select owner</div>
           </ion-item>
           <icon-selector></icon-selector>
           <ion-item>
