--- a/frontend/src/app/components/icon-selector/icon-selector.component.html
+++ b/frontend/src/app/components/icon-selector/icon-selector.component.html
@@ -6,5 +6,5 @@
     <h5>selected:</h5>
     <p>{{ currentIcon }}</p>
   </ion-label>
-  <ion-button fill="outline" slot="end">change</ion-button>
+  <ion-button fill="outline" slot="end" (click)="selectIcon()">change</ion-button>
 </ion-item>
