--- a/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
+++ b/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
@@ -47,7 +47,7 @@
           </ion-item>
           <ion-item>
             <ion-label>end date</ion-label>
-            <ion-datetime displayFormat="D MMM YYYY - H:mm" min="2020" max="2050" formControlName="stop" [(ngModel)]="tempDateStop">
+            <ion-datetime displayFormat="D MMM YYYY - H:mm" min="{{tempDateStart}}" max="2050" formControlName="stop" [(ngModel)]="tempDateStop">
             </ion-datetime>
           </ion-item>
           <ion-grid>
