--- a/frontend/src/app/dialogs/day-events/day-events.page.html
+++ b/frontend/src/app/dialogs/day-events/day-events.page.html
@@ -17,12 +17,13 @@
     </ion-list-header>
     <ion-list *ngFor="let event of dayEvents; let i = index;" lines="full" detail="false">
       <ion-item tappable (click)="toggleDetails(i)" class="event-item">
+        <ion-icon slot="start" name="chevron-forward-outline" class="ion-no-margin" *ngIf="!isDetailed(i)"></ion-icon>
+        <ion-icon slot="start" name="chevron-down-outline" class="ion-no-margin" *ngIf="isDetailed(i)"></ion-icon>
         <ion-icon name="{{ event.icon }}"></ion-icon>
         <ion-label class="ion-text-left">{{ event.title }}</ion-label>
         <ion-label class="ion-text-right event-info">
           {{ event.date.start | date:'HH:mm' }} - {{ event.date.stop | date:'HH:mm' }}
         </ion-label>
-        <ion-icon slot="end" name="chevron-forward-outline" class="ion-no-padding"></ion-icon>
       </ion-item>
       <ion-item *ngIf="isDetailed(i)" text-wrap detail="false">
         <ion-grid>
