renamed method to delete all events in controller and view

--- a/frontend/src/app/dialogs/day-events/day-events.page.html
+++ b/frontend/src/app/dialogs/day-events/day-events.page.html
@@ -11,7 +11,7 @@
   <ion-card>
     <ion-list-header lines="full">
       <ion-label>Todays events</ion-label>
-      <ion-button disabled="{{ dayEvents.length <= 0 }}" fill="outline" size="small" color="danger" (click)="clearEvents()">
+      <ion-button disabled="{{ dayEvents.length <= 0 }}" fill="outline" size="small" color="danger" (click)="deleteAllEvents()">
         delete all
       </ion-button>
     </ion-list-header>
