--- a/frontend/src/app/dialogs/day-events/day-events.page.html
+++ b/frontend/src/app/dialogs/day-events/day-events.page.html
@@ -15,8 +15,8 @@
         delete all
       </ion-button>
     </ion-list-header>
-    <ion-list *ngFor="let event of dayEvents; let i = index;" lines="full" detail="false">
-      <ion-item tappable (click)="toggleEventSelection(i)" class="event-item">
+    <ion-list *ngFor="let event of dayEvents; let i = index;" lines="none" detail="false">
+      <ion-item tappable (click)="toggleEventSelection(i)" class="event-item-simple">
         <ion-icon slot="start" name="chevron-forward-outline" class="ion-no-margin" *ngIf="!isEventSelected(i)"></ion-icon>
         <ion-icon slot="start" name="chevron-down-outline" class="ion-no-margin" *ngIf="isEventSelected(i)"></ion-icon>
         <ion-icon name="{{ event.icon }}"></ion-icon>
@@ -25,7 +25,7 @@
           {{ event.date.start | date:'HH:mm' }} - {{ event.date.stop | date:'HH:mm' }}
         </ion-label>
       </ion-item>
-      <ion-item *ngIf="isEventSelected(i)" text-wrap detail="false">
+      <div *ngIf="isEventSelected(i)" class="selectedEventActions">
         <ion-grid>
           <ion-row align-items-center>
             <ion-col align-items-center>
@@ -36,7 +36,7 @@
             </ion-col>
           </ion-row>
         </ion-grid>
-      </ion-item>
+      </div>
     </ion-list>
     <ion-item class="empty-events-list" lines="none" *ngIf="dayEvents.length <= 0 || !dayEvents">
       <ion-label class="ion-text-center">no events</ion-label>
