--- a/frontend/src/app/dialogs/day-events/day-events.page.scss
+++ b/frontend/src/app/dialogs/day-events/day-events.page.scss
@@ -43,11 +43,15 @@ ion-content {
     ion-list{
         ion-item.event-item-simple {
             --background: var(--ion-color-primary-contrast);
+            border-color: rgb(222,222,222);
+            border-style: solid;
+            border-width: 0px 0px 1px 0px;
             height: 50px;
         }
 
         ion-item.event-item-detailed {
             --background: var(--ion-color-primary-contrast);
+            border-width: 0px 0px 0px 0px;
             height: 50px;
         }
 
@@ -58,6 +62,14 @@ ion-content {
         ion-label.event-info {
             --color: gray;
             font-size: 13px;
+        }
+
+        div.selectedEventActions {
+            background-color: var(--ion-color-primary-contrast);
+            border-color: rgb(222,222,222);
+            border-style: solid;
+            border-width: 0px 0px 1px 0px;
+            padding: 0px;
         }
 
     }
