--- a/frontend/src/app/dialogs/day-events/day-events.page.html
+++ b/frontend/src/app/dialogs/day-events/day-events.page.html
@@ -29,10 +29,16 @@
         <ion-grid>
           <ion-row align-items-center>
             <ion-col align-items-center>
-              <ion-button (click)="deleteEvent(i)" color="danger" expand="full" class="ion-text-lowercase">delete</ion-button>
+              <ion-button (click)="deleteEvent(i)" color="danger" expand="full" class="ion-text-lowercase">
+                delete
+                <ion-icon slot="end" name="trash-sharp"></ion-icon>
+              </ion-button>
             </ion-col>
             <ion-col align-items-center>
-              <ion-button (click)="eventDetails(i)" color="primary" expand="full" class="ion-text-lowercase">update</ion-button>
+              <ion-button (click)="eventDetails(i)" color="primary" expand="full" class="ion-text-lowercase">
+                update
+                <ion-icon slot="end" name="create-sharp"></ion-icon>
+              </ion-button>
             </ion-col>
           </ion-row>
         </ion-grid>
