added icons to add/update event dialog window

--- a/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
+++ b/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
@@ -56,11 +56,13 @@
               <ion-col class="ion-no-padding">
                 <ion-button color="primary" class="ion-text-lowercase" expand="full" (click)="addEvent()">
                   add
+                  <ion-icon slot="end" name="add-circle-sharp"></ion-icon>
                 </ion-button>
               </ion-col>
               <ion-col class="ion-no-padding">
                 <ion-button color="danger" class="ion-text-lowercase" expand="full" (click)="closeDialog()">
                   cancel
+                  <ion-icon slot="end" name="close-circle-sharp"></ion-icon>
                 </ion-button>
               </ion-col>
             </ion-row>
