reformatted calendar page HTML view file

--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -21,8 +21,13 @@
           </ion-button>
         </ion-col>
         <ion-col offset="3" size="1" class="ion-no-padding ion-no-margin ion-align-self-center">
-          <ion-button size="small" fill="outline" shape="round" class="ion-float-right ion-text-lowercase" (click)="changeView()">
-            {{ pageData.viewMode }}
+          <ion-button
+            size="small"
+            fill="outline"
+            shape="round"
+            class="ion-float-right ion-text-lowercase"
+            (click)="changeView()">
+              {{ pageData.viewMode }}
           </ion-button>
         </ion-col>
       </ion-row>
