moved slider options object to calendar page controller

--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -41,7 +41,7 @@
     [currentDate]="pageData.today"
     [eventSource]="pageData.events"
     [calendarMode]="pageData.viewMode"
-    [sliderOptions]="{ allowTouchMove: false, speed: 10 }"
+    [sliderOptions]="pageData.slider"
     (onTitleChanged)="onMonthChanged($event)"
     (onTimeSelected)="onTimeSelected($event)">
   </calendar>
