updated event update method name

--- a/frontend/src/app/dialogs/day-events/day-events.page.html
+++ b/frontend/src/app/dialogs/day-events/day-events.page.html
@@ -35,7 +35,7 @@
               </ion-button>
             </ion-col>
             <ion-col align-items-center>
-              <ion-button (click)="eventDetails(i)" color="primary" expand="full" class="ion-text-lowercase">
+              <ion-button (click)="updateEvent(i)" color="primary" expand="full" class="ion-text-lowercase">
                 update
                 <ion-icon slot="end" name="create-sharp"></ion-icon>
               </ion-button>
