--- a/frontend/src/app/pages/calendar/calendar.page.scss
+++ b/frontend/src/app/pages/calendar/calendar.page.scss
@@ -23,3 +23,13 @@ $headerHeight:56px;
     }
 
 }
+
+.indicator-container {
+    padding-left: 0.5rem;
+}
+
+.event-indicator {
+    width: 5px;
+    height: 5px;
+    border-radius: 5px;
+}
