updated calendar cell with events style

--- a/frontend/src/app/pages/calendar/calendar.page.scss
+++ b/frontend/src/app/pages/calendar/calendar.page.scss
@@ -26,10 +26,13 @@ $headerHeight:56px;
 
 .indicator-container {
     padding-left: 0.5rem;
+    padding-bottom: 0.4rem;
 }
 
 .event-indicator {
+    background: chartreuse;
     width: 5px;
     height: 5px;
     border-radius: 5px;
+    display: table-cell;
 }
