added with-event class to customize day cells containing events

--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -47,9 +47,11 @@
     (onTimeSelected)="onTimeSelected($event)">
   </calendar>
   <ng-template #month-view let-view="view" let-row="row" let-col="col">
-    {{view.dates[row*7+col].label}}
-    <div class="indicator-container">
-      <div class="event-indicator" *ngFor="let event of view.dates[row*7+col].events"></div>
+    <div [class.with-event]="view.dates[row*7+col].events.length">
+      {{view.dates[row*7+col].label}}
+      <div class="indicator-container">
+        <div class="event-indicator" *ngFor="let event of view.dates[row*7+col].events"></div>
+      </div>
     </div>
   </ng-template>
   <add-event-btn></add-event-btn>
