added background color to calendar day with events

--- a/frontend/src/app/pages/calendar/calendar.page.scss
+++ b/frontend/src/app/pages/calendar/calendar.page.scss
@@ -20,6 +20,10 @@ $headerHeight: 56px;
     background-color: rgb(231, 226, 226) !important;
     color: black !important;
   }
+
+  .monthview-primary-with-event {
+    background-color: white !important;
+  }
 }
 
 .indicator-container {
