added missing label color in cell with events

--- a/frontend/src/app/pages/calendar/calendar.page.scss
+++ b/frontend/src/app/pages/calendar/calendar.page.scss
@@ -23,6 +23,7 @@ $headerHeight: 56px;
 
   .monthview-primary-with-event {
     background-color: white !important;
+    color: black !important;
   }
 }
 
