--- a/frontend/src/app/pages/calendar/calendar.page.scss
+++ b/frontend/src/app/pages/calendar/calendar.page.scss
@@ -28,19 +28,20 @@ $headerHeight: 56px;
 }
 
 .indicator-container {
-  padding-left: 0.5rem;
-  padding-bottom: 0.4rem;
+  padding: 0.2rem;
 }
 
 .event-indicator {
-  background: chartreuse;
-  width: 5px;
-  height: 5px;
-  border-radius: 5px;
-  display: table-cell;
+  margin: 3px;
+  background: red;
+  width: 20px;
+  height: 20px;
+  border-radius: 8px;
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
 }
 
 .with-event {
   background-color: --var(--ion-color-primary);
-  border-radius: 10px;
 }
