--- a/frontend/src/app/pages/calendar/calendar.page.scss
+++ b/frontend/src/app/pages/calendar/calendar.page.scss
@@ -30,10 +30,13 @@ $headerHeight: 56px;
 .indicator-container {
   padding: 0.2rem;
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .event-indicator {
-  flex: 1;
+  flex: 1 1 25%;
   margin: 3px;
   background: red;
   width: 20px;
