--- a/frontend/src/app/pages/calendar/calendar.page.scss
+++ b/frontend/src/app/pages/calendar/calendar.page.scss
@@ -28,6 +28,7 @@ $headerHeight: 56px;
 }
 
 .indicator-container {
+  height: 0px;
   padding: 0.2rem;
   display: flex;
   flex-wrap: wrap;
@@ -42,9 +43,9 @@ $headerHeight: 56px;
   width: 20px;
   height: 20px;
   border-radius: 8px;
-  border-color: black;
+  border-color: darkred;
   border-style: solid;
-  border-width: 0.5px;
+  border-width: 1px;
 }
 
 .with-event {
