--- a/frontend/src/app/pages/calendar/calendar.page.scss
+++ b/frontend/src/app/pages/calendar/calendar.page.scss
@@ -32,8 +32,9 @@ $headerHeight: 56px;
   padding: 0.2rem;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
-  justify-content: start;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: flex-start;
 }
 
 .event-indicator {
