updated event border

--- a/frontend/src/app/pages/calendar/calendar.page.scss
+++ b/frontend/src/app/pages/calendar/calendar.page.scss
@@ -47,9 +47,7 @@ $headerHeight: 56px;
   width: 20px;
   height: 20px;
   border-radius: 10px;
-  border-color: darkred;
-  border-style: solid;
-  border-width: 1px;
+  border: 1px solid darkred;
 }
 
 .with-event {
