updated dayEvents manipulation/representation in calendar html

--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -50,7 +50,7 @@
     <div [class.with-event]="view.dates[row*7+col].events.length">
       {{view.dates[row*7+col].label}}
       <div class="indicator-container">
-        <div class="event-indicator" *ngFor="let event of view.dates[row*7+col].events"></div>
+        <div class="event-indicator" *ngFor="let dayEvent of view.dates[row*7+col].events"></div>
       </div>
     </div>
   </ng-template>
