--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -48,7 +48,7 @@
   </calendar>
   <ng-template #monthView let-view="view" let-row="row" let-col="col">
     <div [class.with-event]="view.dates[row*7+col].events.length">
-      {{view.dates[row*7+col].label}} -> {{ view.dates[row*7+col].events.length }}
+      {{view.dates[row*7+col].label}}
       <div class="indicator-container">
         <div class="event-indicator" *ngFor="let dayEvent of view.dates[row*7+col].events"></div>
       </div>
