--- a/services/categories-service/src/main/resources/templates/home.html
+++ b/services/categories-service/src/main/resources/templates/home.html
@@ -11,18 +11,18 @@
         <hr>
         <h4>Build information:</h4>
         <ul>
-            <li>Version: {{ .Build.API }}</li>
-            <li>Spring Boot: {{ .Build.Spring }}</li>
-            <li>Build Time: {{ .Build.Time }}</li>
-            <li>Commit SHA: {{ .Build.SHA }}</li>
+            <li th:text="'Version: ' + ${service_ver}"></li>
+            <li th:text="'SpringBoot: ' + ${spring_ver}"></li>
+            <li th:text="'Build Time: ' + ${build_date}"></li>
+            <li th:text="'Commit SHA: ' + ${commit_sha}"></li>
         </ul>
         <h4>Database type:</h4>
         <ul>
-            <li>{{ .Config.TypeDB }}</li>
+            <li th:text="${repo_type}"></li>
         </ul>
         <h4>PostgreSQL:</h4>
         <ul>
-            <li>{{ .Config.PostgreSQL.IP }}:{{ .Config.PostgreSQL.Port }}</li>
+            <li th:text="${sql_scheme} + '://' + ${sql_ip} + ':' + ${sql_port}"></li>
         </ul>
     </body>
 </html>
