added Spring Version retrieval & updated home.html

--- a/services/categories-service/src/main/resources/templates/home.html
+++ b/services/categories-service/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
         <h4>Build information:</h4>
         <ul>
             <li th:text="'Version: ' + ${service_ver}"></li>
-            <li th:text="'SpringBoot: ' + ${spring_ver}"></li>
+            <li th:text="'Spring Framework: ' + ${spring_ver}"></li>
             <li th:text="'Build Time: ' + ${build_date}"></li>
             <li th:text="'Commit SHA: ' + ${commit_sha}"></li>
         </ul>
