used artifact name to update the service name header and title

--- a/services/categories-service/src/main/resources/templates/home.html
+++ b/services/categories-service/src/main/resources/templates/home.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8">
         <meta name="description" content="Home page for Domesticity Categories Service">
         <meta name="author" content="piopon.github@gmail.com">
-        <title>categories-service</title>
+        <title th:text="${service_name}"></title>
     </head>
     <body>
-        <h1>categories-service</h1>
+        <h1 th:text="${service_name}"></h1>
         <hr>
         <h4>Build information:</h4>
         <ul>
