--- a/services/categories-service/src/main/resources/templates/error.html
+++ b/services/categories-service/src/main/resources/templates/error.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8">
         <meta name="description" content="Home page for Domesticity Categories Service">
         <meta name="author" content="piopon.github@gmail.com">
-        <title th:text="categories-service"></title>
+        <title th:text="${service_name}"></title>
     </head>
     <body>
-        <h1 th:text="categories-service"></h1>
+        <h1 th:text="${service_name}"></h1>
         <hr>
         <h3 th:text="'Error ' + ${status} +': ' + ${error}"></h3>
         <ul>
