used stylesheet to properly format error message

--- a/services/categories-service/src/main/resources/templates/error.html
+++ b/services/categories-service/src/main/resources/templates/error.html
@@ -4,12 +4,13 @@
         <meta charset="utf-8">
         <meta name="description" content="Home page for Domesticity Categories Service">
         <meta name="author" content="piopon.github@gmail.com">
+        <link rel="stylesheet" th:href="@{/css/styles.css}">
         <title th:text="${service_name}"></title>
     </head>
     <body>
         <h1 th:text="${service_name}"></h1>
         <hr>
-        <h3 th:text="'Error ' + ${status} +': ' + ${error}"></h3>
+        <h2 class="error" th:text="'Error ' + ${status} +': ' + ${error}"></h2>
         <ul>
             <li th:text="'Date: ' + ${timestamp}"></li>
             <li th:text="'URL path: ' + ${path}"></li>
