--- a/services/categories-service/src/main/resources/templates/error.html
+++ b/services/categories-service/src/main/resources/templates/error.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="https://www.thymeleaf.org">
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="Home page for Domesticity Categories Service">
+        <meta name="description" content="Error page for Domesticity Categories Service">
         <meta name="author" content="piopon.github@gmail.com">
         <link rel="stylesheet" th:href="@{/css/styles.css}">
         <title th:text="${service_name}"></title>
